test/files/neg/t5903e.check
Test_2.scala:4: error: value class may not be a member of another class
    case t"$x" => println(x)
         ^
one error found
